# jj-hunk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  flake.nix
.claude/commands/: clean-history.md
.fp/: config.toml
.github/workflows/: release.yml
src/: commands.rs  diff.rs  main.rs  spec.rs
tests/: integration.rs
