[package]
name = "jj-hunk"
version = "0.3.0"
edition = "2021"
description = "Programmatic hunk selection for jj"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
anyhow = "1"
walkdir = "2"
serde_yaml = "0.9"
sha2 = "0.10"
